# mls-standings-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  etl.py  etl_analytics.py  etl_raw.py  schemas.py
src/app/: main.py
src/etl/: constants.py  etl_analytics.py  etl_raw.py  main.py  utils.py
