[project]
name = "mls-standings-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "prefect>=3.4.3",
    "pydantic>=2.11.5",
    "streamlit>=1.45.1",
]

[tool.setuptools.packages.find]
where = ["src"]
